--- a/Gert.Site/Gert.Site.csproj
+++ b/Gert.Site/Gert.Site.csproj
@@ -160,6 +160,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\IdentityConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\AlunoController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\InstituicaoController.cs" />
     <Compile Include="Controllers\ProfessorController.cs" />
@@ -454,6 +455,9 @@
     <Content Include="Views\Professor\_AddUsuario.cshtml" />
     <Content Include="Views\Professor\_Tarefas.cshtml" />
     <Content Include="Views\Professor\_AddTarefa.cshtml" />
+    <Content Include="Views\Instituicao\_Tarefas.cshtml" />
+    <Content Include="Views\Aluno\Index.cshtml" />
+    <Content Include="Views\Aluno\_Disciplinas.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
