--- a/Gert.Model/Gert.Model.csproj
+++ b/Gert.Model/Gert.Model.csproj
@@ -72,6 +72,7 @@
     <Compile Include="DataBase\Model\Pessoa.cs" />
     <Compile Include="DataBase\Model\Professor.cs" />
     <Compile Include="DataBase\Model\Tarefa.cs" />
+    <Compile Include="DataBase\Model\TarefaAluno.cs" />
     <Compile Include="DataBase\Model\Usuario.cs" />
     <Compile Include="DataBase\Repository\CursoRepository.cs" />
     <Compile Include="DataBase\Repository\DisciplinaAlunoRepository.cs" />
@@ -80,9 +81,10 @@
     <Compile Include="DataBase\Repository\PessoaRepository.cs" />
     <Compile Include="DataBase\Repository\ProfessorRepository.cs" />
     <Compile Include="DataBase\Repository\RepositoryBase.cs" />
+    <Compile Include="DataBase\Repository\TarefaAlunoRepository.cs" />
     <Compile Include="DataBase\Repository\TarefaRepository.cs" />
     <Compile Include="DataBase\Repository\UsuarioRepository.cs" />
-    <Compile Include="Enumerators\SitiacaoTarefaEnum.cs" />
+    <Compile Include="Enumerators\SituacaoTarefaEnum.cs" />
     <Compile Include="Enumerators\UsuarioEnum.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\FileUtils.cs" />
