--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@
 
 /Gert.Model/bin/Debug/System.Web.Mvc.dll
 /Gert.Site/bin/Rotativa.dll
+/Gert.Email/bin/Debug
+/Gert.Email/Properties
+/Gert.Email/obj/Debug
+/_ReSharperPlatformVs121.Gert
